Removes unused flag